--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  
-  <title>Online Code Editor</title>
+
+  <title>Codemate | An Online Code Editor made for Programming and Development Mode</title>
 </head>
 
 <body>
