--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,18 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
 
+
+  <!-- default favicon -->
+  <link rel="shortcut icon" href="/icon.png" type="image/x-icon">
+  <!-- wideley used favicon -->
+  <link rel="icon" href="/icon.png" sizes="32x32" type="image/png">
+  <!-- for apple mobile devices -->
+  <link rel="apple-touch-icon-precomposed" href="/icon.png" type="image/png" sizes="152x152">
+  <link rel="apple-touch-icon-precomposed" href="/icon.png" type="image/png" sizes="120x120">
+  <!-- google tv favicon -->
+  <link rel="icon" href="/icon.png" sizes="96x96" type="image/png">
+
+
   <title>Codemate | An Online Code Editor made for Programming and Development Mode</title>
 </head>
 
